# cppChess

./: .gitignore  CMakeLists.txt  MAKEFILE  README.md  YetAnotherChessGame  game.csv  game3.csv  main.cpp  main.hpp  requirements  stalemate.csv
.github/workflows/: c-cpp-mac.yml  c-cpp.yml  cpp-ubuntu.yml  cpp-win.yml  cpp.yml
docs/: index.md
gui/: Gui.cpp  Gui.hpp  main.cpp  resources.hpp
helper/: Converter.cpp  Converter.hpp  ImportExport.cpp  ImportExport.hpp  Settings.cpp  Settings.hpp
model/: Castle.hpp  CheckController.cpp  CheckController.hpp  ChessField.cpp  ChessField.hpp  Figure.cpp  Figure.hpp  Move.cpp  Move.hpp  MoveController.cpp  MoveController.hpp  Opponent.cpp  Player.cpp  Player.hpp  PlayerWhite.cpp
model/figures/: Bishop.cpp  Bishop.hpp  Horse.cpp  Horse.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Pawn.cpp  Pawn.hpp  Queen.cpp  Queen.hpp  Rook.cpp  Rook.hpp
model/moves/: Capture.cpp  Capture.hpp  Castle.cpp  Castle.hpp  EnPassant.cpp  EnPassant.hpp  Move.cpp  Move.hpp
